# src/modules/manage/dtos/delete-comment.response.ts
@@ -1,0 +1,3 @@
+export class DeleteCommentResponseDto {
+
+}
