# src/modules/manage/dtos/update-comment.response.ts
@@ -1,0 +1,3 @@
+export class UpdateCommentResponseDto {
+
+}
